# qe-compiler

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  check_format.sh  conan_deps.sh  conandata.yml  conanfile.py  qssc-activate.in  requirements-dev.txt
include/: CMakeLists.txt  Config.h.in  QSSC.h
include/API/: api.h  error.h  errors.h
include/Arguments/: Arguments.h  Signature.h
include/Config/: CLIConfig.h  CLIConfigBuilder.h  EnvVarConfig.h  QSSConfig.h
include/Conversion/: CMakeLists.txt
include/Conversion/OQ3ToStandard/: OQ3ToStandard.h
include/Conversion/QUIRToLLVM/: QUIRToLLVM.h
include/Conversion/QUIRToPulse/: LoadPulseCals.h  QUIRToPulse.h
include/Conversion/QUIRToStandard/: CBitOperations.h  QUIRCast.h  SwitchOpLowering.h  TypeConversion.h  VariablesToGlobalMemRefConversion.h
include/Dialect/: CMakeLists.txt  RegisterDialects.h  RegisterPasses.h
include/Dialect/OQ3/: CMakeLists.txt
include/Dialect/OQ3/IR/: OQ3Base.td  (+18 more)
include/Dialect/Pulse/: CMakeLists.txt  PulseOps.h
include/Dialect/QCS/: CMakeLists.txt
include/Dialect/QUIR/: CMakeLists.txt
include/Dialect/System/: CMakeLists.txt
include/Frontend/: CMakeLists.txt
include/Frontend/OpenQASM3/: BaseQASM3Visitor.h  CMakeLists.txt  OpenQASM3Frontend.h  PrintQASM3Visitor.h  QUIRGenQASM3Visitor.h  QUIRVariableBuilder.h
include/HAL/: PassRegistration.h  SystemConfiguration.h  TargetOperationPass.h  TargetRegistry.h  TargetSystem.h  TargetSystemInfo.h  TargetSystemRegistry.h
include/HAL/Compile/: TargetCompilationManager.h  TargetCompilationScheduler.h  ThreadedCompilationManager.h  ThreadedCompilationScheduler.h
include/Parameters/: Parameters.h  Signature.h
include/Payload/: CMakeLists.txt  PatchableZipPayload.h  Payload.h  PayloadRegistry.h
include/PayloadV2/: CMakeLists.txt  PayloadV2.h  QuantumExecutionModule.h
include/Plugin/: CMakeLists.txt  PluginInfo.h  PluginInfo.hpp  PluginRegistry.h
include/Support/: Pimpl.h
include/Utils/: DebugIndent.h  GraphProcessing.h  LegacyInputConversion.h  OperationUtils.h  SymbolCacheAnalysis.h  SystemDefinition.h  SystemNodes.h
include/qss-c/Dialect/: OQ3.h  Pulse.h  QCS.h  QUIR.h
lib/: CMakeLists.txt  QSSC.cpp
lib/API/: CMakeLists.txt  api.cpp  bind.cpp  error.cpp  errors.cpp
lib/Arguments/: Arguments.cpp  CMakeLists.txt  Signature.cpp
lib/Bindings/Python/: DialectOQ3.cpp  DialectPulse.cpp  DialectQCS.cpp  DialectQUIR.cpp  oq3.cpp  oq3.h  pulse.cpp  pulse.h  qcs.cpp  qcs.h  quir.cpp  quir.h
lib/CAPI/: CMakeLists.txt
lib/CAPI/Dialect/: CMakeLists.txt  OQ3.cpp  Pulse.cpp  QCS.cpp  QUIR.cpp
lib/Config/: CLIConfig.cpp  CLIConfigBuilder.cpp  CMakeLists.txt  EnvVarConfig.cpp  QSSConfig.cpp
lib/Conversion/: CMakeLists.txt
lib/Conversion/OQ3ToStandard/: CMakeLists.txt  OQ3ToStandard.cpp
lib/Conversion/QUIRToPulse/: CMakeLists.txt  LoadPulseCals.cpp  QUIRToPulse.cpp
lib/Conversion/QUIRToStandard/: CBitOperations.cpp  CMakeLists.txt  QUIRCast.cpp  SwitchOpLowering.cpp  TypeConversion.cpp  VariablesToGlobalMemRefConversion.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/Pulse/: CMakeLists.txt
lib/Dialect/QCS/: CMakeLists.txt
lib/Dialect/QUIR/: CMakeLists.txt
lib/Frontend/: CMakeLists.txt
lib/Frontend/OpenQASM3/: BaseQASM3Visitor.cpp  CMakeLists.txt  OpenQASM3Frontend.cpp  PrintQASM3Visitor.cpp  QUIRGenQASM3Visitor.cpp  QUIRVariableBuilder.cpp
lib/HAL/: CMakeLists.txt  PassRegistration.cpp  SystemConfiguration.cpp  TargetRegistry.cpp  TargetSystem.cpp  TargetSystemInfo.cpp  TargetSystemRegistry.cpp  Targets.inc.in
lib/HAL/Compile/: CMakeLists.txt  TargetCompilationManager.cpp  TargetCompilationScheduler.cpp  ThreadedCompilationManager.cpp  ThreadedCompilationScheduler.cpp
lib/Parameters/: CMakeLists.txt  Parameters.cpp  Signature.cpp
lib/Payload/: CMakeLists.txt  Payload.cpp  PayloadRegistry.cpp  Payloads.inc.in
lib/Payload/BinaryPayload/: BinaryPayload.cpp  BinaryPayload.h  CMakeLists.txt  Payload.inc
lib/Payload/ZipPayload/: CMakeLists.txt  PatchableZipPayload.cpp  Payload.inc  ZipPayload.cpp  ZipPayload.h  ZipUtil.cpp  ZipUtil.h
lib/PayloadV2/: CMakeLists.txt  PayloadV2.cpp
lib/Utils/: CMakeLists.txt  DebugIndent.cpp  LegacyInputConversion.cpp  SystemDefinition.cpp
python_lib/: CMakeLists.txt  MANIFEST.in  README.md  dummy.c  pyproject.toml.in  setup.cfg  setup.py  setup_mlir.sh
python_lib/qss_compiler/: CMakeLists.txt  __init__.py  compile.py  exception.py  exceptions.py  exceptions_enum.cpp  lib.cpp  lib.h  lib_enums.cpp  lib_enums.h  link.py  logs.py  python_interface.cpp
python_lib/qss_compiler/examples/: Pulse Bindings Demo.ipynb  SequenceEx.mlir  SequenceEx.py  TestOps.mlir  TestOps.py  parse.py  pulse.py  test_out.mlir
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Config/: test-config.tst
test/Conversion/QUIRToPulse/: convert-quir-to-pulse.mlir
test/Dialect/Arith/: arith-ops-canonicalize.mlir
test/Dialect/Math/: math-ops-canonicalize.mlir
test/Frontend/OpenQASM3/: angles.qasm  arith-ops.qasm  assign.qasm  barrier.qasm  bell-v0.qasm  bell-v1.qasm  bit-int-compare.qasm  bitindices.qasm  bitops-reg.qasm  bitops.qasm  bitops2.qasm  bitstring-init.qasm  bool_conditional_assign.qasm  booleans.qasm  builtin-constants.qasm  cast-op.qasm  cbit.qasm  classical-subroutines.qasm  compare-bits.qasm  compare-bool.qasm  complex.qasm  conditionals.qasm  delay-inside-controlflow.qasm  delay.qasm  diagnostics-parse-error.qasm  diagnostics-unsupported-error.qasm  extern.qasm  floats.qasm  for-loop.qasm  for-loop2.qasm  for-loop3.qasm  gate.qasm  gates-issue-655-2.qasm  gates-issue-655.qasm  handle-ints.qasm  input-output-variables.qasm  input-parameters-array-test.qasm  input-parameters-errors.qasm  input-parameters-if.qasm  input-parameters-while.qasm  (+35 more)
test/IO/: bytecode.mlir  none.mlir
test/python_lib/: conftest.py  test_compile.py  test_link.py  test_python_bindings.py
test/unittest/: CMakeLists.txt  quir-dialect.cpp
tools/qss-compiler/: CMakeLists.txt  qss-compiler.cpp
tools/qss-opt/: CMakeLists.txt  qss-opt.cpp
(+473 files in other folders)
