# (C) Copyright IBM 2021, 2022.
#
# Any modifications or derivative works of this code must retain this
# copyright notice, and modified files need to carry a notice indicating
# that they have been altered from the originals.

add_subdirectory(Conversion)
add_subdirectory(Dialect)
add_subdirectory(Frontend)
add_subdirectory(Payload)
