[metadata]
name = qss-compiler
version = file: VERSION.txt
license = Proprietary
description = IBM Quantum System Software Compiler
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.ibm.com/IBM-Q-Software/qss-compiler
author = IBM Quantum
author_email = Thomas.A.Alexander@ibm.com
classifiers =
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    License :: Other/Proprietary License
    Intended Audience :: Developers””
    Intended Audience :: Science/Research
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7

[options.package_data]
qss_compiler = *.so

[options.packages.find]
where = .
include = *

[options.extras_require]
test =
    pytest

is_pure=false

[bdist_wheel]
universal = 0

[build_reno]
output-file = RELEASENOTES.txt
repo-root = ../
